# tff-nd

./: .gitignore  CMakeLists.txt  README.md  TODO  generate_single_header.py
examples/: basic.cc
examples/support/: cthead.cc  cthead.h  image.cc  image.h
src/: common.h  config.h  elem.h  elem_tuple.h  nd.h  ndarray.h  ndarray.tcc  ndarray_iterator.h  ndarray_iterator.tcc  ndarray_timed_view.h  ndarray_timed_wraparound_view.h  ndarray_traits.h  ndarray_view.h  ndarray_view.tcc  ndarray_view_cast.h  ndarray_view_operations.h  ndarray_view_operations.tcc  ndarray_wraparound_view.h  ndarray_wraparound_view.tcc  ndcoord.h  ndcoord_dyn.h  ndspan.h  ndspan.tcc  ndspan_iterator.h  pod_array_format.h  pod_array_format.icc
src/detail/: ndarray_initializer_helper.h  ndarray_initializer_helper.tcc  ndarray_opaque_view_wrapper.h  ndarray_timed_view_derived.h  ndarray_view_fcall.h  ndarray_wrapper.h  ndarray_wrapper.tcc
src/nd/: common.h  config.h  nd.h  ndarray.tcc  ndarray_view.h  ndarray_view_cast.h  ndspan_iterator.h  pod_array_format.icc
src/nd/detail/: ndarray_timed_view_derived.h  ndarray_wrapper.tcc
src/nd/opaque/: ndarray_opaque.h  ndarray_timed_opaque_view.h
src/nd/standalone_helpers/: misc.h
src/opaque/: ndarray_opaque.h  ndarray_opaque.tcc  ndarray_opaque_iterator.h  ndarray_opaque_traits.h  ndarray_opaque_view.h  ndarray_opaque_view.tcc  ndarray_opaque_view_cast.h  ndarray_opaque_view_derived.h  ndarray_timed_opaque_view.h  ndarray_timed_opaque_view_cast.h  ndarray_timed_wraparound_opaque_view.h  ndarray_timed_wraparound_opaque_view_cast.h  ndarray_wraparound_opaque_view.h  ndarray_wraparound_opaque_view_cast.h
src/opaque_format/: ndarray.h  ndarray.icc  raw.h
src/standalone_helpers/: assert.h  misc.h  raw_allocator.h
test/: basic.cc  cast.cc  container.cc  elem_tuple.cc  ndcoord.cc  ndcoord_dyn.cc  ndspan.cc  opaque.cc  opaque_container.cc  opaque_timed.cc  opaque_timed_wraparound.cc  opaque_wraparound.cc  pod_array_format.cc  timed.cc  timed_wraparound.cc  wraparound.cc
test/nd/: basic.cc  cast.cc  container.cc  elem_tuple.cc  ndcoord.cc  ndcoord_dyn.cc  ndspan.cc  opaque.cc  opaque_container.cc  opaque_timed.cc  pod_array_format.cc  timed.cc
test/support/: ndarray.cc  ndarray.h
